compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_type_in_path_dep.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

import example_module
fn make_var() -> example_module.Rec {
                                ↑    
  example_module.Var1(1)
}

---------- Jumped to:

pub type Rec {
↑▔▔▔▔▔▔▔▔▔▔▔  
  Var1(Int)
  Var2(Int, Int)
}
