compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_definition_unqualified_function.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
---
---------- Jumping from: 

import wibble.{wobble}
fn main() {
  wobble()
   ↑      
}

---------- Jumped to:
pub fn wobble() {}
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔
